--- a/home.html
+++ b/home.html
@@ -9,21 +9,18 @@
 
   <link rel="shortcut icon" href="images\pngegg.png" type="image/x-icon">
 
-  <!-- Font -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-
   <!-- CSS -->
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="styles/home.css">
 </head>
 
 <body>
   <table id="navigation_panel">
     <tr>
-      <td><a href="https://eventmanagementsystem.klaus464.repl.co/">Home</a></td>
-      <td>Events</td>
-      <td>Gallery</td>
-      <td>Contact Us</td>
-      <td>Login</td>
+      <td><a href="home.html">Home</a></td>
+      <td><a href="events.html">Events</a></td>
+      <td><a href="gallery.html">Gallery</a></td>
+      <td><a href="contact_us.html">Contact Us</a></td>
+      <td><a href="login.html">Login</a></td>
     </tr>
   </table>
 
@@ -40,7 +37,7 @@
 
 
   <!-- JavaScript -->
-  <script src="home.js"></script>
+  <script src="scripts/home.js"></script>
 </body>
 
 </html>
