--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
   </table>
 
   <center>
-    <h1 id="heading" class="gradient-text">Event Mangement System</h1>
+    <h1 id="heading">Event Mangement System</h1>
     <p id="intro">
       Welcome
       <br>
