--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event Mangement System</title>
 
-  <link rel="shortcut icon" href="images\pngegg.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/pngegg.png" type="image/x-icon">
 
   <!-- CSS -->
   <link rel="stylesheet" href="styles/home.css">
