--- a/home.html
+++ b/home.html
@@ -5,13 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Event Mangement System</title>
+  <title>Home</title>
 
   <link rel="shortcut icon" href="images/pngegg.png" type="image/x-icon">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="styles/home.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
+
+<!-- JavaScript -->
+<script src="scripts.js"></script>
 
 <body>
   <table id="navigation_panel">
@@ -25,7 +28,7 @@
   </table>
 
   <center>
-    <h1 id="heading">Event Mangement System</h1>
+    <h1>Event Mangement System</h1>
     <p id="intro">
       Welcome
       <br>
@@ -33,11 +36,6 @@
       upcoming events, and Register for the events you're interested in.
     </p>
   </center>
-
-
-
-  <!-- JavaScript -->
-  <script src="scripts/home.js"></script>
 </body>
 
 </html>
