--- a/events.html
+++ b/events.html
@@ -28,29 +28,11 @@
     </table>
 
     <center>
-    <h1>Events</h1>
-    <table>
-        <h2>Azura 2K23</h2>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <h2>Annual Day</h2>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <h2></h2>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </table>
-</center>
+        <h1>Events</h1>
+        <p class="message">
+            There are no upcoming events...
+        </p>
+    </center>
 </body>
 
 </html>
-
