--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 
   <center>
     <h1>Event Mangement System</h1>
-    <p id="intro">
+    <p class="message">
       Welcome
       <br>
       This is CMRCET's Events page here you can Explore the Gallery of past events, Grab all the information regarding
