--- a/contact_us.html
+++ b/contact_us.html
@@ -26,7 +26,10 @@
             <td><a href="login.html">Login</a></td>
         </tr>
     </table>
-    
+
+    <center>
+        <h1>Contact Us</h1>
+    </center>
 </body>
 
 </html>
