--- a/events.html
+++ b/events.html
@@ -29,7 +29,7 @@
 
     <center>
         <h1>Events</h1>
-        <p class="message">
+        <p id="message">
             There are no upcoming events...
         </p>
     </center>
