--- a/login.html
+++ b/login.html
@@ -29,6 +29,26 @@
 
     <center>
         <h1>Login</h1>
+        <table>
+            <tr>
+                <td>
+                    <input type="email" id="email" placeholder="Email">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="password" id="password" placeholder="password">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                    <button>Login</button>
+                    &nbsp; &nbsp; 
+                    <button>Sign Up</button>
+                </td>
+            </tr>
+        </table>
     </center>
 </body>
 
